[project]
name = "langflow-base"
version = "0.0.93"
description = "A Python package with a built-in web application"
authors = [{name ="Langflow", email = "contact@langflow.org"}]
maintainers = [
    {name = "Carlos Coelho", email = "carlos@langflow.org"},
    {name = "Cristhian Zanforlin", email = "cristhian.lousa@gmail.com"},
    {name = "Gabriel Almeida", email = "gabriel@langflow.org"},
    {name = "Igor Carvalho", email = "igorr.ackerman@gmail.com"},
    {name = "Lucas Eduoli", email = "lucaseduoli@gmail.com"},
    {name = "Otávio Anovazzi", email = "otavio2204@gmail.com"},
    {name = "Rodrigo Nader", email = "rodrigo@langflow.org"},
    {name = "Italo dos Anjos", email = "italojohnnydosanjos@gmail.com"},
]
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["nlp", "langchain", "openai", "gpt", "gui"]
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi >=0.111.0,<1",
    "httpx",
    "uvicorn >=0.30.0,<1",
    "gunicorn >=22.0.0,<23",
    "langchain >=0.2.0,<0.3",
    "langchain-core >=0.2.32,<0.3",
    "langchainhub >=0.1.15,<0.2",
    "sqlmodel ==0.0.18",
    "loguru >=0.7.1,<1",
    "rich >=13.7.0,<14",
    "langchain-experimental >=0.0.61,<1",
    "pydantic >=2.7.0,<3",
    "pydantic-settings >=2.2.0,<3",
    "websockets",
    "typer >=0.12.0,<1",
    "cachetools >=5.3.1,<6",
    "platformdirs >=4.2.0,<5",
    "python-multipart >=0.0.7,<1",
    "orjson ==3.10.0",
    "alembic >=1.13.0,<2",
    "passlib >=1.7.4,<2",
    "bcrypt ==4.0.1",
    "pillow >=10.2.0,<11",
    "docstring-parser >=0.16,<1",
    "python-jose >=3.3.0,<4",
    "pandas ==2.2.2",
    "multiprocess >=0.70.14,<1",
    "duckdb >=1.0.0,<2",
    "python-docx >=1.1.0,<2",
    "jq >=1.7.0,<2",
    "pypdf >=4.2.0,<5",
    "nest-asyncio >=1.6.0,<2",
    "emoji >=2.12.0,<3",
    "cryptography >=42.0.5,<43",
    "asyncer >=0.0.5,<1",
    "pyperclip >=1.8.2,<2",
    "uncurl >=0.0.11,<1",
    "sentry-sdk[fastapi,loguru] >=2.5.1,<3",
    "chardet >=5.2.0,<6",
    "firecrawl-py >=0.0.16,<1",
    "opentelemetry-api >=1.25.0,<2",
    "opentelemetry-sdk >=1.25.0,<2",
    "opentelemetry-exporter-prometheus >=0.46b0,<1",
    "opentelemetry-instrumentation-fastapi >=0.46b0,<1",
    "prometheus-client >=0.20.0,<1",
    "aiofiles >=24.1.0,<25",
    "setuptools >=70,<71",
    "nanoid >=2.0.0,<3",
    "filelock >=3.15.4,<4",
    "grandalf >=0.8.0,<1",
    "crewai >=0.36.0,<1",
    "spider-client >=0.0.27,<1",
    "diskcache >=5.6.3,<6"
]

[project.urls]
Documentation = "https://docs.langflow.org"
Repository = "https://github.com/langflow-ai/langflow"
Issues = "https://github.com/langflow-ai/langflow/issues"
Homepage = "https://langflow.org"

[project.scripts]
langflow-base = "langflow.__main__:main"


[tool.uv]
dev-dependencies = [
    "types-redis >=4.6.0.5,<5",
    "ipykernel >=6.29.0,<7",
    "mypy >=1.11.0,<2",
    "ruff >=0.4.5,<1",
    "httpx",
    "pytest >=8.2.0,<9",
    "types-requests >=2.32.0,<3",
    "requests >=2.32.0,<3",
    "pytest-cov >=5.0.0,<6",
    "pandas-stubs >=2.1.4.231227,<3",
    "types-pillow >=10.2.0.20240213,<11",
    "types-pyyaml >=6.0.12.8,<7",
    "types-python-jose >=3.3.4.8,<4",
    "types-passlib >=1.7.7.13,<2",
    "locust >=2.23.1,<3",
    "pytest-mock >=3.14.0,<4",
    "pytest-xdist >=3.6.0,<4",
    "types-pywin32 >=306.0.0.4,<307",
    "types-google-cloud-ndb >=2.2.0.0,<3",
    "pytest-sugar >=1.0.0,<2",
    "respx >=0.21.1,<1",
    "pytest-instafail >=0.5.0,<1",
    "pytest-asyncio >=0.23.0,<1",
    "pytest-profiling >=1.7.0,<2",
    "pre-commit >=3.7.0,<4",
    "vulture >=2.11,<3",
    "dictdiffer >=0.9.0,<1",
    "pytest-split >=0.9.0,<1",
    "pytest-flakefinder >=1.1.0,<2"
]

[tool.pytest.ini_options]
minversion = "6.0"
#addopts = "-ra"
testpaths = ["tests", "integration"]
console_output_style = "progress"
filterwarnings = ["ignore::DeprecationWarning"]
log_cli = true
markers = ["async_test"]

[tool.mypy]
plugins = ["pydantic.mypy"]
follow_imports = "skip"
disable_error_code = ["type-var"]
namespace_packages = true
mypy_path = "langflow"
ignore_missing_imports = true

[tool.ruff]
exclude = ["src/backend/langflow/alembic/*"]
line-length = 120

