[project]
name = "langflow-saas"
version = "0.1.0"
description = "SaaS multi-tenancy plugin for Langflow — organizations, billing, rate-limiting, invitations"
requires-python = ">=3.10,<3.14"
license = "MIT"

dependencies = [
    # Ties to the same langflow-base major version so APIs stay compatible.
    # Bump the lower bound whenever a Langflow upgrade changes an integration
    # point (currently only: langflow.services.deps session_scope,
    # langflow.services.auth.utils get_current_user_from_access_token,
    # and the langflow.plugins entry-point protocol in plugin_routes.py).
    "langflow-base>=0.9.0,<1.0.0",
    "sqlmodel~=0.0.37",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.2.0",
    "alembic>=1.13.0,<2.0.0",
    "redis>=5.0.0,<6.0.0",
    "stripe>=8.0.0,<9.0.0",
    "httpx>=0.27.0",           # for email providers without a heavy SDK
    "nanoid>=2.0.0,<3.0.0",
    "itsdangerous>=2.0.0",     # for signed invitation tokens
]

[project.entry-points."langflow.plugins"]
# This is the ONLY integration point with Langflow core.
# Langflow calls register(wrapper) at startup via load_plugin_routes().
saas = "langflow_saas.plugin:register"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["langflow_saas"]
